--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sample Node-Mongo user management app",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/trajchev/node-mongo-auth/issues"
   },
-  "homepage": "https://github.com/trajchev/node-mongo-auth#readme"
+  "homepage": "https://github.com/trajchev/node-mongo-auth#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "morgan": "^1.9.1"
+  }
 }
